# Ferrum

./: .M001-SUMMARY.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  commit_msg.txt  test_policy.rs
.github/workflows/: ci-cd.yml
.trae/rules/: all.md  code-style.md  command-line.md  global.md  project-development.md  security-coding.md  tech-stack.md  testing.md  version-control.md
change/: run-2026-04-05.md
docs/: M001-technical-evaluation.md  M002-security-framework-completion.md  M003-sandbox-feature-plan.md
docs/compass/: MoDa-Browser-based.md  MoDa-Browser-dev.md
examples/: CMakeLists.txt  minimal_browser.cpp
src/: main.rs
src/ipc/: Cargo.toml  channel.rs  lib.rs  protocol.rs  security.rs
src/network/: Cargo.toml  http.rs  lib.rs  tls.rs
src/platform/: Cargo.toml  lib.rs
src/render/: CMakeLists.txt  Cargo.toml  lib.rs
src/render/include/: dom_manager.hpp  layout_engine.hpp  paint_engine.hpp
src/render/src/: dom_manager.cpp  layout_engine.cpp  paint_engine.cpp
src/sandbox/: Cargo.toml  lib.rs  manager.rs  namespace.rs
src/security/: Cargo.toml  capabilities.rs  lib.rs  permissions.rs  policy.rs  validation.rs
src/storage/: Cargo.toml  lib.rs
