[package]
name = "moda-ipc"
version = "0.1.0"
edition = "2021"

[lib]
name = "moda_ipc"
path = "lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.35", features = ["full"] }
bytes = "1.5"
uuid = { version = "1.6", features = ["v4"] }
bincode = "1.3"
